--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
     "@std/fmt": "jsr:@std/fmt@^1.0.8",
     "@std/fs": "jsr:@std/fs@^1.0.19",
     "@std/path": "jsr:@std/path@^1.1.2",
+    "@std/testing": "jsr:@std/testing@^1.0.9",
     "@std/yaml": "jsr:@std/yaml@^1.0.9"
   },
   "tasks": {
