--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,12 @@
 {
   "imports": {
-    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.8",
+    "@cliffy/command": "jsr:@cliffy/command@^1.0.0",
     "@david/dax": "jsr:@david/dax@^0.43.2",
-    "@std/fmt": "jsr:@std/fmt@^1.0.8",
-    "@std/fs": "jsr:@std/fs@^1.0.19",
-    "@std/path": "jsr:@std/path@^1.1.2",
-    "@std/testing": "jsr:@std/testing@^1.0.9",
-    "@std/yaml": "jsr:@std/yaml@^1.0.9"
+    "@std/fmt": "jsr:@std/fmt@^1.0.9",
+    "@std/fs": "jsr:@std/fs@^1.0.22",
+    "@std/path": "jsr:@std/path@^1.1.4",
+    "@std/testing": "jsr:@std/testing@^1.0.17",
+    "@std/yaml": "jsr:@std/yaml@^1.0.11"
   },
   "tasks": {
     "dev": "deno run -A src/main.ts",
